@@ -10,6 +10,7 @@
 - added `CONF.logger` that enables the writing of `console` into the `/logs/debug.log` file
 - fixed `encryption` in actions
 - added new option `allow_check_upload` for disabling upload content-type checks
+- added `$.cancel()` method in the `AUTH()` delegate
 
 ========================
 0.0.88
